@@ -1,3 +1,9 @@
+2009-12-13  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclBasic.c:   Moving TclBCArgumentRelease call 
+	* generic/tclExecute.c: from TclNRTailcallObjCmd to TEBC, so that
+	the pairing of the Enter and Release calls is clearer.
+
 2009-12-12  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclTest.c (TestconcatobjCmd): [Bug 2895367]: Stop memory
